tests/fixtures/LatestTests/ContainerTests/errors/array_index_more_dims_error.fg
/; EXPECT_ERROR: IndexingMoreDimensionsThanArrayTypeHas
var a:int[2] = [1, 2]
println(a[0][2])
